# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
configuration/: base.yaml  local.yaml
migrations/: 20240209105646_create_subscriptions_table.sql
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
