[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1", features = ["derive"]}
config = "0.14.0"
chrono = { version = "0.4.22", default-features = false, features = ["clock"]}
uuid = { version = "1.7.0", features=["v4"]}
secrecy = { version = "0.8", features = ["serde"]}
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
tracing-actix-web = "0.7"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["runtime-tokio-rustls",
        "macros", 
        "postgres", 
        "uuid", 
        "chrono", 
        "migrate"]

[dev-dependencies]
reqwest = "0.12.3"
once_cell = "1"
